[tool.poetry]
name = "disaster-analysis"
version = "0.1.0"
description = ""
authors = ["mtr2130 <michaelreis91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^1.30.0"
pandas = "^2.3.0"
fastexcel = "^0.14.0"
matplotlib = "^3.10.3"
numpy = "^2.3.1"
statsmodels = "^0.14.4"
scipy = "1.15.3"
scikit-learn = "^1.7.1"
xarray = "^2025.9.0"
netcdf4 = "^1.7.2"
pydap = "^3.5.6"
geopandas = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
